--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,9 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="당신의 마음을 읽어드립니다."
     />
-    <title>App</title>
+    <meta property="og:title" content="마법의 수정구슬" />
+    <meta property="og:image" content="%PUBLIC_URL%/meta_image.jpg" />
+    <title>마법의 수정구슬</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
